--- a/customization/body.css
+++ b/customization/body.css
@@ -1,12 +1,13 @@
 @font-face {
     font-family: Montserrat-SemiBold;
-    src: url("../../library/text-font/Montserrat");
+    src: url("../library/text-font/Montserrat");
 }
 
 @font-face {
     font-family: "Montserrat-Regular";
-    src: url("../../library/text-font/Montserrat/Montserrat-Regular.ttf");
+    src: url("../library/text-font/Montserrat/Montserrat-Regular.ttf");
 }
+
 
 div.number-of-section
 {
@@ -76,7 +77,7 @@ p
 }
 
 .main-header {
-    background: url("../pictures/landing/section01/Header-BG-Image.jpg") center no-repeat;
+    background: url("section01/Header-BG-Image.jpg") center no-repeat;
     background-size: cover;
     height: 100vh;
     min-height: 700px;
