--- a/customization/section03/style/section03.css
+++ b/customization/section03/style/section03.css
@@ -2,12 +2,7 @@
 {
     /*background-color: #f6f6f6;*/
     padding-top: 50px;
-    padding-bottom: 50px;
+    /*padding-bottom: 50px;*/
 }
 
-.section04
-{
-    background-color: #E2E2E2;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
+
