--- a/customization/body.css
+++ b/customization/body.css
@@ -218,8 +218,10 @@ section .container .row .myrow
 /*// Extra large devices (large desktops, 1200px and up)*/
 @media (min-width: 1200px) {}
 
-html, body
+body
 {
     min-height: 1px;
     height: 100%;
+    background: url("section02/picture/world-map.png") center no-repeat;
+    background-size: cover;
 }
