--- a/customization/body.css
+++ b/customization/body.css
@@ -220,8 +220,9 @@ section .container .row .myrow
 
 body
 {
-    min-height: 1px;
+    /*min-height: 1px;*/
     height: 100%;
-    background: url("section02/picture/world-map.png") center no-repeat;
-    background-size: cover;
+    background: url("section02/picture/world-map.png") center no-repeat , rgba(255, 255, 255, 0.4);
+    background-blend-mode: color;
+    background-size: auto;
 }
