--- a/customization/section01/section01.css
+++ b/customization/section01/section01.css
@@ -1,11 +1,16 @@
-.section01-first-display
+.section01
 {
     /*background-color: black;*/
     /*background: url("background-mountain.jpeg") center no-repeat;*/
     /*background-size: cover;*/
 }
 
-.section01-first-display img
+.section01 img
 {
     height: 100px;
+}
+
+.my-logo
+{
+    height: 150px;
 }
